# todo-app

./: Cargo.toml  MEMO.MD  Makefile  docker-compose.yml  rustfmt.toml
server/: .env  Cargo.toml
server/migrations/2022-03-09-061537_db_init/: up.sql
server/src/: lib.rs  models.rs  route.rs  schema.rs
server/src/actions/: todos.rs
server/src/configs/: database.rs  errors.rs
server/src/controllers/: dev.rs  todo.rs
server/src/handlers/: todos.rs
