[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0"
actix-web = { version="4", features=["rustls"]}
actix-rt = "2.6.0"
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
uuid = { version = "0.8.2", features = ["serde", "v4"]}
log = { version = "0.4.14", features = ["std", "serde"] }
tokio = {version="1.17.0", features=["full"]}
